--- a/Breaking/app/build.gradle
+++ b/Breaking/app/build.gradle
@@ -26,9 +26,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    task wrapper(type: Wrapper) {
+        gradleVersion = '7.0'
+    }
+
+    buildFeatures {
+        // 뷰 바인딩 활성화
+        viewBinding true
+    }
+
 }
 
 dependencies {
@@ -41,3 +52,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+tasks.register("prepareKotlinBuildScriptModel"){}
