--- a/Breaking/app/build.gradle
+++ b/Breaking/app/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
 }
+//local.properties 파일 읽기
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 android {
     compileSdk 32
@@ -14,6 +17,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        /*
+            local.properties 에 정의한 값을 네이티브 코드 상에서 사용가능하도록 변수 정의.
+            BuildConfig 클래스에 생성.
+         */
+        buildConfigField "String", "clientId", properties['google_client_id']
+        buildConfigField "String", "clientSecret", properties['google_client_secret']
+        buildConfigField "String", "kakaoApiKey", properties['kakao_api_key']
     }
 
     buildTypes {
@@ -54,6 +65,10 @@ dependencies {
     // retrofit & gson
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.google.android.gms:play-services-auth:20.2.0' // 구글 로그인 서비스
+
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9") // 코루틴 라이브러리
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
