--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
     <!-- 인터넷 사용 권한 설정-->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--카메라 및 저장위치를 위치 접근을 위한 권한 설정-->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <application
         android:name=".GlobalApplication"
         android:allowBackup="true"
@@ -18,6 +24,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Breaking"
         tools:targetApi="31" >
+
+        <!-- 이미지 가져올 때, 보안상의 이유로 fileProvider 를 사용해 가져와야 함. -->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths">
+            </meta-data>
+        </provider>
 
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
