--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".board.PostActivity"
+            android:exported="false"/>
+        <activity
             android:name=".NaviSettingActivity"
             android:exported="false" />
         <activity
