--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dope.breaking">
-    <!-- 카메라 및 저장위치를 위치 접근을 위한 권한 설정 -->
+
     <application
         android:name=".GlobalApplication"
         android:allowBackup="false"
@@ -16,6 +16,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".UserPageActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FollowActivity"
+            android:exported="false" />
+        <activity
             android:name=".ImageExpansionActivity"
             android:exported="false" />
         <activity
@@ -23,7 +29,7 @@
             android:exported="false" />
         <activity
             android:name=".board.PostActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".NaviSettingActivity"
             android:exported="false" />
