feat: added object mapper and changed selected&unselected color

--- a/Breaking/app/build.gradle
+++ b/Breaking/app/build.gradle
@@ -80,5 +80,11 @@ dependencies {
 
     // drawerLayout
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
+
+    // object mapper
+    implementation "com.fasterxml.jackson.core:jackson-core:2.9.9"
+    implementation "com.fasterxml.jackson.core:jackson-annotations:2.9.9"
+    implementation "com.fasterxml.jackson.core:jackson-databind:2.9.9"
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
 }
 tasks.register("prepareKotlinBuildScriptModel"){}
