chore: add facebook shimmer dependency

--- a/Breaking/app/build.gradle
+++ b/Breaking/app/build.gradle
@@ -82,6 +82,9 @@ dependencies {
     // drawerLayout
     implementation "androidx.drawerlayout:drawerlayout:1.1.1"
 
+    // facebook shimmer effect
+    implementation "com.facebook.shimmer:shimmer:0.5.0"
+    
     // object mapper
     implementation "com.fasterxml.jackson.core:jackson-core:2.9.9"
     implementation "com.fasterxml.jackson.core:jackson-annotations:2.9.9"
