refactor: rename NaviSettingActivity.kt to SettingActivity.kt

--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:name=".board.PostActivity"
             android:exported="false" />
         <activity
-            android:name=".NaviSettingActivity"
+            android:name=".SettingActivity"
             android:exported="false" />
         <activity
             android:name=".NaviProfileActivity"
