feat : implement request post detail data (#90)
* chore: changed and added files gradle, indicators, icons, strings

* feat: added request for post detail, DTO, functions

* feat: changed hashTag function

* feat: changed design of post detail screen and added pop-up menu post detail

* feat: implemented postDetail components, adapter and remove garbage code postActivity

--- a/Breaking/app/build.gradle
+++ b/Breaking/app/build.gradle
@@ -91,6 +91,9 @@ dependencies {
     implementation "com.fasterxml.jackson.core:jackson-databind:2.9.9"
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.9"
 
+    // ViewPager2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
     // libs 폴더 접근 인식
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
