--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".board.PostLikeActivity"
+            android:name=".board.PostPurchaseListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".board.PostLikeListActivity"
             android:exported="false" />
         <activity
             android:name=".EditPostActivity"
