--- a/Breaking/app/src/main/AndroidManifest.xml
+++ b/Breaking/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
             android:exported="false" />
         <activity
             android:name=".EditPostActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"
+            />
         <activity
             android:name=".FinanceActivity"
             android:exported="false"
@@ -112,7 +114,9 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".SignUpActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"
+            />
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
