--- a/Breaking/.gitignore
+++ b/Breaking/.gitignore
@@ -4,6 +4,8 @@
 /.idea/caches
 /.idea/misc.xml
 /.idea/gradle.xml
+/.idea/compiler.xml
+/.idea/vcs.xml
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
